# Infotecs

./: CMakeLists.txt  Primes.cpp  Primes.h  README.md  Test.cpp  main.cpp
googletest/googlemock/include/gmock/: gmock-matchers.h
googletest/googlemock/include/gmock/internal/: gmock-port.h
googletest/googlemock/scripts/: fuse_gmock_files.py
googletest/googlemock/test/: gmock-internal-utils_test.cc  gmock-port_test.cc  gmock_stress_test.cc
googletest/googletest/: CMakeLists.txt
googletest/googletest/cmake/: internal_utils.cmake
googletest/googletest/include/gtest/: gtest-death-test.h  gtest-printers.h  gtest.h  gtest_pred_impl.h
googletest/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h
googletest/googletest/include/gtest/internal/custom/: gtest-printers.h
googletest/googletest/samples/: sample1_unittest.cc
googletest/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  release_docs.py
googletest/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
googletest/googletest/test/: googletest-death-test-test.cc  googletest-filepath-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-param-test-test.cc  googletest-param-test2-test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest_main_unittest.cc  gtest_skip_check_output_test.py  gtest_skip_environment_check_output_test.py  gtest_sole_header_test.cc  gtest_stress_test.cc  gtest_unittest.cc
